fix: 修复 Vercel 部署 404 问题
- 将 ai_agent_journal.html 重命名为 index.html
- 更新所有文档中的文件名引用
- 修复 migrate.html 中的链接

这样 Vercel 可以正确识别入口文件

--- a/migrate.html
+++ b/migrate.html
@@ -354,7 +354,7 @@
 
         // 打开日志系统
         function openJournal() {
-            window.location.href = 'ai_agent_journal.html';
+            window.location.href = 'index.html';
         }
 
         // 页面加载时检测数据
